# KhoraEngine

./: .cursorrules  .gitignore  AGENTS.md  Assets.toml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTRUCTIONS.md  PROMPT.md  QWEN.md  README.md  RULES.md  SECURITY.md  SOUL.md  agent.yaml  deny.toml  verify.ps1  verify.sh
crates/khora-agents/: Cargo.toml  test_compile_error_3.txt
crates/khora-agents/src/: lib.rs
crates/khora-agents/src/asset_agent/: agent.rs  loader.rs  mod.rs
crates/khora-agents/src/asset_service/: decoder.rs  mod.rs
crates/khora-agents/src/audio_agent/: mod.rs
crates/khora-agents/src/ecs_agent/: garbage_collector_agent.rs  mod.rs
crates/khora-agents/src/physics_agent/: agent.rs  mod.rs  query_service.rs
crates/khora-agents/src/render_agent/: agent.rs  mesh_preparation.rs  mod.rs
crates/khora-agents/src/serialization_agent/: mod.rs
crates/khora-agents/src/serialization_service/: mod.rs
crates/khora-agents/src/shadow_agent/: agent.rs  mod.rs
crates/khora-agents/src/ui_agent/: mod.rs
crates/khora-agents/tests/: asset_loading_test.rs  camera_extraction_test.rs  forward_plus_test.rs  garbage_collector_test.rs  physics_agent_tests.rs  render_agent_gorna_test.rs
crates/khora-core/: Cargo.toml
crates/khora-core/src/: context.rs  lib.rs  service_registry.rs
crates/khora-core/src/agent/: completion.rs  dependency.rs  execution_phase.rs  mod.rs  mode.rs  timing.rs
crates/khora-core/src/asset/: font.rs  handle.rs  metadata.rs  mod.rs  uuid.rs
crates/khora-core/src/audio/: device.rs  mix_bus.rs  mod.rs
crates/khora-core/src/control/: gorna.rs  mod.rs
crates/khora-core/src/ecs/: entity.rs  mod.rs
crates/khora-core/src/event/: bus.rs  mod.rs
crates/khora-core/src/graph/: mod.rs  topological_sort.rs
crates/khora-core/src/lane/: bus.rs  context_keys.rs  deck.rs  lock.rs  mod.rs
crates/khora-core/src/math/: affine_transform.rs  color.rs  dimension.rs  geometry.rs  matrix.rs  mod.rs  quaternion.rs  vector.rs
crates/khora-core/src/memory/: mod.rs  tracking_allocator.rs
crates/khora-core/src/physics/: collision.rs  dynamic_tree.rs  mod.rs  solver.rs
crates/khora-core/src/platform/: input.rs  input_map.rs  mod.rs  window.rs
crates/khora-core/src/renderer/: error.rs  forward_plus.rs  light.rs  mod.rs
crates/khora-core/src/runtime/: backends.rs  mod.rs  resources.rs  services.rs
crates/khora-core/src/scene/: format.rs  mod.rs  serialization.rs
crates/khora-core/src/telemetry/: event.rs  metrics.rs  mod.rs  monitoring.rs
crates/khora-core/src/ui/: editor_overlay.rs  fonts.rs  geometry.rs  layout.rs  mod.rs  theme.rs  types.rs
crates/khora-core/src/utils/: any_map.rs  bitflags.rs  mod.rs  timer.rs
crates/khora-core/src/vfs/: mod.rs
crates/khora-data/: Cargo.toml
crates/khora-data/benches/: query_bench.rs
crates/khora-data/src/: lib.rs
crates/khora-data/src/allocators/: mod.rs  tracking_allocator.rs
crates/khora-data/src/assets/: audio.rs  mod.rs  storage.rs
crates/khora-data/src/ecs/: bitset.rs  bundle.rs  component.rs  entity.rs  entity_store.rs  maintenance.rs  mod.rs  page.rs  planner.rs  query.rs  query_plan.rs  registry.rs  serialization.rs  storage.rs  system.rs  tests.rs  world.rs  world_ext.rs
crates/khora-data/src/flow/: audio.rs  mod.rs  physics.rs  registration.rs  render.rs  selection.rs  shadow.rs  ui.rs
crates/khora-data/src/gpu/: cache.rs  mod.rs  projection.rs
crates/khora-data/src/physics/: collision.rs  mod.rs
crates/khora-data/src/render/: editor_view.rs  extract.rs  frame_graph.rs  mod.rs  shadow_outputs.rs  store.rs  world.rs
crates/khora-data/src/scene/: archetype_strategy.rs  definition.rs  definition_strategy.rs  messagepack_strategy.rs  migrations.rs  mod.rs  recipe.rs  recipe_strategy.rs  registry.rs  strategy.rs
crates/khora-data/src/ui/: components.rs  extract.rs  image_atlas.rs  layout_view.rs  mod.rs  scene.rs  store.rs
crates/khora-editor/: Cargo.toml
crates/khora-editor/assets/fonts/: README.md
crates/khora-editor/src/: app.rs  bootstrap.rs  build_game.rs  cmd_palette.rs  commands.rs  fonts.rs  hot_reload.rs  input.rs  main.rs  mod_agents.rs  mod_gizmo.rs  mod_mode.rs  mod_telemetry.rs  ops.rs  project_vfs.rs  scene_io.rs  theme.rs  util.rs
crates/khora-editor/src/chrome/: mod.rs  spine.rs  status_bar.rs  title_bar.rs  toolbar.rs  widgets.rs
crates/khora-infra/: Cargo.toml
crates/khora-infra/src/: lib.rs
crates/khora-infra/src/audio/: mod.rs
crates/khora-io/: Cargo.toml
crates/khora-io/src/: lib.rs  vfs.rs
crates/khora-lanes/: Cargo.toml
crates/khora-lanes/src/: lib.rs
crates/khora-runtime/: Cargo.toml
crates/khora-runtime/src/: main.rs
crates/khora-sdk/: Cargo.toml
crates/khora-sdk/src/: engine.rs  game_world.rs  lib.rs  run_default.rs  traits.rs  vessel.rs  winit_adapters.rs
crates/khora-telemetry/: Cargo.toml
crates/khora-telemetry/src/: lib.rs  service.rs
examples/sandbox/: Cargo.toml
examples/sandbox/src/: main.rs
hub/: Cargo.toml
hub/src/: app.rs  async_pump.rs  auth.rs  bootstrap.rs  config.rs  download.rs  fonts.rs  github.rs  main.rs  project.rs  theme.rs  widgets.rs
hub/src/chrome/: banner.rs  mod.rs  status_bar.rs  topbar.rs
hub/src/screens/: engine_manager.rs  home.rs  mod.rs  new_project.rs  settings.rs
hub/src/services/: config.rs  download.rs  git.rs  mod.rs
hub/src/state/: auth.rs  banner.rs  engine_manager.rs  home.rs  mod.rs  new_project.rs  screen.rs
hub/src/ui/: fonts.rs  mod.rs  theme.rs  widgets.rs
khora_engine_core/: Cargo.toml
khora_engine_core/src/: lib.rs
khora_engine_core/src/core/: engine.rs  mod.rs  monitoring.rs  timer.rs
khora_engine_core/src/event/: mod.rs
khora_engine_core/src/math/: color.rs  dimension.rs  geometry.rs  matrix.rs  mod.rs  quaternion.rs  vector.rs
khora_engine_core/src/memory/: allocator.rs  mod.rs
khora_engine_core/src/subsystems/: input.rs  mod.rs  renderer.rs
khora_engine_core/src/window/: mod.rs
xtask/: Cargo.toml
xtask/src/: helpers.rs  main.rs
xtask/src/commands/: assets.rs  assets_config.rs  ci.rs  dev.rs  mod.rs
(+477 files in other folders)
