[workspace]
resolver = "2" # Recommended for modern Rust
members = [
    # New modular architecture
    "crates/khora-core",
    "crates/khora-control", 
    "crates/khora-data",
    "crates/khora-lanes",
    "crates/khora-agents",
    "crates/khora-infra",
    "crates/khora-telemetry",
    "crates/khora-editor",
    "crates/khora-plugins",
    "crates/khora-sdk",
    
    # Examples and tools
    "examples/sandbox",
    "xtask",
]


[profile.dev]
opt-level = 1 # Enable minimal optimization even in dev

[profile.release]
lto = true      # Link-Time Optimization for release
codegen-units = 1 # Maximize optimizations (compiles slower)