[package]
name = "khora-hub"
version = "0.1.0"
edition = "2024"
description = "Khora Engine Hub — project manager and engine launcher"

[[bin]]
name = "khora-hub"
path = "src/main.rs"

[dependencies]
# Engine SDK — the hub reaches the egui+eframe backend exclusively
# through `khora_sdk::tool_ui::*`. No direct dep on egui/eframe.
khora-sdk = { path = "../crates/khora-sdk" }

# HTTP client for GitHub releases API
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# JSON + serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File system + paths
dirs = "5"

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Open file/directory pickers and process spawning
rfd = "0.17"
open = "5"

# Zip extraction for engine downloads
zip = "2"

# Image decoding (for window icon from PNG)
image = { version = "0.25", default-features = false, features = ["png"] }
