[package]
name = "khora_engine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
approx = "0.5"
anyhow = "1.0"

log = "0.4"
env_logger = "0.11"

flume = "0.11"

winit = "0.30"
wgpu = "26.0"

raw-window-handle = "0.6" 
pollster = "0.4"

[features]
default = ["raw-window-handle"]
raw-window-handle = []