[package]
name = "khora_engine_core"
version = "0.1.0"
edition = "2021"

[dependencies]
approx = "0.5"
anyhow = "1.0"

log = "0.4"
env_logger = "0.11"

flume = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

winit = "0.30"
wgpu = "26.0"

raw-window-handle = "0.6" 
pollster = "0.4"
async-trait = "0.1"

[features]
default = ["raw-window-handle"]
raw-window-handle = []