[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
khora-sdk = { path = "../crates/khora-sdk" }

clap = { version = "4.5.46", features = ["derive", "cargo"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"
walkdir = "2.5.0"
bincode = { version = "2.0.1", features = ["serde"] }