[package]
name = "khora-agents"
version = "0.1.0"
edition = "2021"
description = "Intelligent wrappers driving the Lanes"

[dependencies]
khora-core = { path = "../khora-core" }
khora-data = { path = "../khora-data" }
khora-lanes = { path = "../khora-lanes" }

# Error handling
anyhow = "1.0"

# Image handling
image = "0.25.8"

tempfile = "3.10.1"
bincode = { version = "2.0.1", features = ["serde"] }