[package]
name = "khora-agents"
version = "0.1.1"
edition = "2021"
description = "Intelligent wrappers driving the Lanes"

[dependencies]
khora-core = { path = "../khora-core" }
khora-data = { path = "../khora-data" }
khora-lanes = { path = "../khora-lanes" }
khora-telemetry = { path = "../khora-telemetry" }

bytemuck = { version = "1.24.0", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Image handling
image = "0.25.9"

tempfile = "3.23.0"
bincode = { version = "2.0.1", features = ["serde"] }