[package]
name = "khora-core"
version = "0.2.0"
edition = "2021"
description = "Foundational crate with traits, core types, and interface contracts"

[dependencies]
# Math and approximation
approx = "0.5"

# Error handling
anyhow = "1.0"

# Async support
async-trait = "0.1"

# Serialization
uuid = { version = "1.18.0", features = ["serde", "v4"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Communication
flume = "0.11"

# Logging
log = "0.4"

# Handle
raw-window-handle = "0.6"