[package]
name = "khora-core"
version = "0.2.1"
edition = "2021"
description = "Foundational crate with traits, core types, and interface contracts"

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }

# Math and approximation
approx = "0.5"

# Error handling
anyhow = "1.0"

# Async support
async-trait = "0.1"

# Serialization
bincode = { version = "2.0.1", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "v5", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Communication
flume = "0.12"

# Logging
log = "0.4"

# Handle
raw-window-handle = "0.6"