[package]
name = "khora-data"
version = "0.1.1"
edition = "2021"
description = "Data layouts, allocators, and streaming systems"

[dependencies]
khora-core = { path = "../khora-core" }
khora-macros = { path = "../khora-macros" }

log = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "query_bench"
harness = false