[package]
name = "khora-editor"
version = "0.1.0"
edition = "2021"
description = "The Khora Engine editor GUI"

[[bin]]
name = "khora-editor"
path = "src/main.rs"

[dependencies]
khora-sdk = { path = "../khora-sdk" }
khora-core = { path = "../khora-core" }
khora-agents = { path = "../khora-agents" }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
rfd = "0.15"
open = "5"
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
