[package]
name = "khora-infra"
version = "0.2.2"
edition = "2021"
description = "Concrete implementations of external dependencies"

[dependencies]
khora-core = { path = "../khora-core" }

# Graphics dependencies (wgpu backend)
wgpu = "28.0"
raw-window-handle = "0.6"
pollster = "0.4"
async-trait = "0.1"
bytemuck = { version = "1.25.0", features = ["derive"] }

# Platform dependencies (winit)
winit = "0.30"

# Audio
cpal = "0.17.0"
sysinfo = "0.33.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

# Physics
rapier3d = { version = "0.22", features = ["debug-render"] }

[features]
default = ["graphics", "platform", "physics"]
graphics = []
platform = []
physics = []
