[package]
name = "khora-infra"
version = "0.2.2"
edition = "2021"
description = "Concrete implementations of external dependencies"

[dependencies]
khora-core = { path = "../khora-core" }

# Graphics dependencies (wgpu backend)
wgpu = "29.0"
raw-window-handle = "0.6"
pollster = "0.4"
async-trait = "0.1"
bytemuck = { version = "1.25.0", features = ["derive"] }

# Platform dependencies (winit).
# `default-features` already include `x11` + `wayland` on Linux, but listing
# them explicitly guards against a transitive dep (egui-winit, wgpu, …)
# turning defaults off and causing winit's `platform_impl/mod.rs` to fire
# its "platform not supported" compile_error on Linux CI.
winit = { version = "0.30", features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }

# Audio
cpal = "0.17.0"
sysinfo = "0.38.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"

# Physics
rapier3d = { version = "0.32", features = ["debug-render"] }
taffy = "0.9.2"

# Editor UI (egui overlay)
egui = "0.33"
egui-winit = "0.33"

# eframe — used by `ui::egui::app::run_native` to boot standalone
# tools (the hub) without them depending on eframe directly.
#
# We enable the `glow` (OpenGL) backend instead of `wgpu` because
# (a) the hub has no 3D viewport so wgpu is overkill,
# (b) `glow` is eframe's default and bundles platform backends
#     automatically (dx*/vk*/gl*/x11/wayland), whereas the `wgpu`
#     feature alone leaves the underlying `wgpu` dep without any
#     backend selected — boot panics on Windows with
#     "No wgpu backend feature that is implemented for the target
#      platform was enabled".
eframe = { version = "0.33", default-features = false, features = [
    "default_fonts",
    "glow",
    "wayland",
    "x11",
] }

[features]
default = ["graphics", "platform", "physics"]
graphics = []
platform = []
physics = []
