[package]
name = "khora-io"
version = "0.1.0"
edition = "2021"
description = "I/O services for asset loading, VFS, and scene serialization"

[dependencies]
khora-core = { path = "../khora-core" }
khora-data = { path = "../khora-data" }
khora-telemetry = { path = "../khora-telemetry" }

log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
ron = "0.12.0"
ahash = "0.8"

[dev-dependencies]
tempfile = "3.25.0"
