[package]
name = "khora-io"
version = "0.1.0"
edition = "2021"
description = "I/O services for asset loading, VFS, and scene serialization"

[dependencies]
khora-core = { path = "../khora-core" }
khora-data = { path = "../khora-data" }
khora-telemetry = { path = "../khora-telemetry" }

log = "0.4"
anyhow = "1.0"
thiserror = "2.0.18"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
ron = "0.12.0"
ahash = "0.8"
base64 = "0.22.1"
bytemuck = { version = "1.16", features = ["derive"] }

# Image handling
image = "0.25.9"

# Mesh handling
tobj = "4.0"
gltf = { version = "1.0", features = ["import"] }

# Audio
hound = "3.5"
symphonia = { version = "0.5", features = ["all-formats", "all-codecs"] }

# Asset auto-registration via inventory (mirrors MaterialRegistration in khora-data)
inventory = "0.3"

# Filesystem watching for hot-reload (cross-platform: inotify/FSEvents/RDCW)
notify = "6"
crossbeam-channel = "0.5"

# Stable sorting / hashing helpers used by IndexBuilder (forward-slash rel paths)
walkdir = "2.5"

# Pack v2: per-entry LZ4 compression + BLAKE3 manifest hashes
lz4_flex = { version = "0.11", default-features = false, features = ["safe-encode", "safe-decode", "std"] }
blake3 = "1.5"

[dev-dependencies]
tempfile = "3.25.0"
