[package]
name = "khora-lanes"
version = "0.1.0"
edition = "2021"
description = "Hot-path execution pipelines for performance-critical operations"

[dependencies]
khora-core = { path = "../khora-core" }
khora-data = { path = "../khora-data" }

ahash = "0.8"
base64 = "0.22.1" # For data URI decoding

# Error handling
anyhow = "1.0"

# Image handling
image = "0.25.8"

# Mesh handling
tobj = "4.0"
gltf = { version = "1.0", features = ["import"] }