[package]
name = "khora-lanes"
version = "0.1.2"
edition = "2021"
description = "Hot-path execution pipelines for performance-critical operations"

[dependencies]
khora-core = { path = "../khora-core" }
khora-data = { path = "../khora-data" }
log = "0.4"

ahash = "0.8"
base64 = "0.22.1" # For data URI decoding
bytemuck = { version = "1.16", features = ["derive"] }
bincode = "2.0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Image handling
image = "0.25.9"

# Mesh handling
tobj = "4.0"
gltf = { version = "1.0", features = ["import"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.12.0"

# Audio
hound = "3.5"
symphonia = { version = "0.5", features = ["all-formats", "all-codecs"] }