[package]
name = "khora-lanes"
version = "0.1.2"
edition = "2021"
description = "Hot-path execution pipelines for performance-critical operations"

[dependencies]
khora-core = { path = "../khora-core" }
khora-data = { path = "../khora-data" }
khora-io = { path = "../khora-io" }
log = "0.4"

ahash = "0.8"
bytemuck = { version = "1.16", features = ["derive"] }
bincode = "2.0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.12.0"