[package]
name = "khora-sdk"
version = "0.2.0"
edition = "2021"
description = "The stable, public-facing API for game developers"

[dependencies]
khora-core = { path = "../khora-core" }
khora-agents = { path = "../khora-agents" }
khora-control = { path = "../khora-control" }
khora-infra = { path = "../khora-infra" }
khora-lanes = { path = "../khora-lanes" }
khora-telemetry = { path = "../khora-telemetry" }
khora-data = { path = "../khora-data" }

winit = "0.30"
log = "0.4"
anyhow = "1.0"