[package]
name = "khora-sdk"
version = "0.3.0"
edition = "2021"
description = "The stable, public-facing API and engine frameworks for game developers"

[dependencies]
khora-core = { path = "../khora-core" }
khora-data = { path = "../khora-data" }
khora-infra = { path = "../khora-infra" }
khora-agents = { path = "../khora-agents" }
khora-control = { path = "../khora-control" }
khora-lanes = { path = "../khora-lanes" }
khora-telemetry = { path = "../khora-telemetry" }
khora-io = { path = "../khora-io" }

anyhow = "1.0"
# See khora-infra/Cargo.toml for the rationale on listing the Linux platform
# backends explicitly.
winit = { version = "0.30", features = ["x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"] }
log = "0.4"
crossbeam-channel = "0.5"
inventory = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
