[package]
name = "khora-telemetry"
version = "0.1.0"
edition = "2021"
description = "Telemetry, logging, and monitoring systems for the engine"

[dependencies]
khora-core = { path = "../khora-core" }

# Logging and tracing
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"

# Metrics and monitoring
sysinfo = "0.37"

# Serialization for telemetry data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
