[package]
name = "sandbox"
version = "0.2.0"
edition = "2021"
description = "Sandbox example for testing and demos"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
khora-sdk = { path = "../../crates/khora-sdk" }

env_logger = "0.11"
anyhow = "1.0"
log = "0.4.28"
bytemuck = { version = "1.15", features = ["derive"] }